--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*Variables definidas*/
 :root{
+  --white:#ffffff;
   --black:#000000;
-  --grey:#9e9e9e;
 }
 /* selector universal y alude a todos los elementos que están contenidos dentro de otro*/
 *{
@@ -21,6 +21,9 @@ html{
   scroll-padding-top:6rem;
   scroll-behavior: smooth;
 }
+body{
+  background-color:rgba(230, 230, 230, 0.794);
+}
 
 section{
   padding:2rem 9%;
@@ -36,32 +39,39 @@ section{
 
 .titulo span{
   text-transform: uppercase;
-  color:var(--grey);
+  color:blueviolet;
 }
 /*Botones "general"*/
 .btn{
   display: inline-block;
   margin-top: 1rem;
   border-radius: .5rem;
-  border:.2rem solid var(--black);
   font-weight: bolder;
   font-size: 1.7rem;
   color:var(--black);
   cursor: pointer;
-  background:#fff;
+  background:rgb(132, 0, 255);
+  color:white;
   padding:.8rem 3rem;
 }
 
 .btn:hover{
-  background:var(--grey);
-  color:#fff;
+  display: inline-block;
+  margin-top: 1rem;
+  border-radius: .5rem;
+  font-weight: bolder;
+  font-size: 1.7rem;
+  color:rgb(255, 255, 255);
+  cursor: pointer;
+  background:rgb(255, 137, 1);
+  padding:.8rem 3rem;
 }
 /*Header*/
 header{
   position: fixed;
   top:0; left:0; right:0;
   z-index: 1000;
-  background:#fff;
+  background: rgb(132, 0, 255);
   padding:2rem 9%;
   display: flex;
   align-items: center;
@@ -71,12 +81,12 @@ header{
 
 header .veci-Logo{
   font-size: 2.5rem;
-  color:var(--black);
+  color:whitesmoke;
 }
 
 header .navbar a{
   font-size: 1.7rem;
-  color:var(--black);
+  color:whitesmoke;
   margin:0 1rem;
 }
 
@@ -86,12 +96,12 @@ header .navbar a:hover{
 
 header .icons a{
   font-size: 2.5rem;
-  color:var(--black);
+  color:whitesmoke;
   margin-left:1.5rem;
 }
 
 header .icons a:hover{
-  color:var(--grey);
+  color:orange;
 }
 
 #menu-bar{
@@ -102,11 +112,17 @@ header .icons a:hover{
   border-radius: .3rem;
   cursor: pointer;
   display: none;
+  background-color: rgb(132, 0, 255);
 }
 
 .contenedor-home{
   padding:0;
   position:relative;
+  
+}
+.intro{
+  font-family: 'Concert One', cursive;
+  font-size: 2rem;
 }
 
 .contenedor-home .slider .slide{
@@ -140,7 +156,7 @@ header .icons a:hover{
 /*Prueba de animacion - Banner Principal*/
 .contenedor-home .slider .slide .image .market{
   width:100%;
-  transform: rotate(-35deg);
+ 
   animation:market .3s linear;
 }
 
@@ -248,6 +264,9 @@ header .icons a:hover{
   overflow-y: hidden;
   overflow-x: scroll;
   align-items: center;
+  width: 117rem;
+  border-radius: 10px;
+  background-color: rgb(255, 251, 5);
 }
 
 .promocion .row .box{
@@ -263,20 +282,19 @@ header .icons a:hover{
 }
 
 .promocion .row .box img{
-  height:20rem;
+  height:15rem;
+  width: 150px;
   /*transform: rotate(-35deg);*/
-
-  margin:2rem 1rem;
 }
 
 .promocion .row .box .content h3{
   color:var(--black);
-  font-size: 2.5rem;
+  font-size: 1.8rem;
 }
 
 .promocion .row .box .content .precio{
   color:var(--black);
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: bolder;
   padding:1rem 0;
 }
@@ -380,25 +398,100 @@ header .icons a:hover{
 .opinion .box-container .stars i{
   font-size: 2rem;
 }
+/*Form*/
+.formulario {
+  width: 500px;
+  max-width: 100%;
+  margin: auto;
+  margin-top: 30px;
+  padding: 20px;
+  box-shadow: 0 0 20px 1px rgba(0,0,0,0.3);
+  position: relative;
+}
+.formulario__titulo {
+  text-align: center;
+  margin-top: 0;
+  color: black;
+  background-color: whitesmoke;
+}
+.formulario__input, .formulario__label, .formulario__submit {
+  display: block;
+  width: 100%;
+  font-size: 1.3em;
+}
+.formulario__input {
+  padding: 20px;
+  background: rgba(0,0,0,0.1);
+  border: 1px solid black);
+  margin-bottom: 40px;
+}
+.formulario__input:focus {
+  outline: 1px solid black;
+}
+.formulario__input:focus + .formulario__label{
+  margin-top: -135px;
+}
+.formulario__label {
+  padding-left: 15px;
+  position: absolute;
+  margin-top: -85px;
+  z-index: -20;
+  color:white;
+  transition: all 0.2s;
+}
+.formulario__submit {
+  background: rgba(0,0,0,0.7);
+  color: white;
+  padding: 10px 20px;
+  cursor: pointer;
+  border: none;
+}
+
 /*Footer*/
 .footer .box-container{
   border:.1rem solid rgba(0,0,0,.1);
   border-radius: .5rem;
-  background:#f9f9f9;
+  background:rgb(132, 0, 255);
+  color:white;
   padding:2rem;
   display: flex;
   flex-wrap: wrap;
   gap:1.5rem;
 }
 
-.footer .box-container .equipo{
+.footer .box-container .box{
+  flex:1 1 20rem;
+}
+
+.footer .box-container .box h3{
+  color:var(--black);
+  font-size: 2.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.footer .box-container .box a{
+  color:rgb(0, 0, 0);
+  font-size: 1.5rem;
+  padding-bottom: 1.5rem;
+  display: block;
+}
+
+.footer .box-container .box a:hover{
+  color:rgb(0, 238, 255);
+}
+
+.footer .box-container .credit{
   text-align: center;
   width:100%;
   border-top: .1rem solid rgba(0,0,0,.1);
   font-size: 1.5rem;
   padding:1rem;
   padding-top: 2rem;
-  color:#999;
+  color:rgb(0, 0, 0);
+}
+
+.footer .box-container .credit span{
+  color:rgb(132, 0, 255);
 }
 
 /* media queries  */
