--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /*Variables definidas*/
 :root{
   --white:#ffffff;
@@ -66,6 +67,31 @@ section{
   background:rgb(255, 137, 1);
   padding:.8rem 3rem;
 }
+/*Boton carrito -formulario*/
+.bton{
+  display: inline-block;
+  margin-top: 1rem;
+  border-radius: .5rem;
+  font-weight: bolder;
+  font-size: 1.7rem;
+  cursor: pointer;
+  background:rgb(0, 0, 0);
+  color:white;
+  padding:.8rem 3rem;
+  text-align: center;
+}
+
+.bton:hover{
+  display: inline-block;
+  margin-top: 1rem;
+  border-radius: .5rem;
+  font-weight: bolder;
+  font-size: 1.7rem;
+  color:rgb(255, 255, 255);
+  cursor: pointer;
+  background:rgb(255, 137, 1);
+  padding:.8rem 3rem;
+}
 /*Header*/
 header{
   position: fixed;
@@ -85,8 +111,9 @@ header .veci-Logo{
 }
 
 header .navbar a{
+  background-color: rgb(132, 0, 255);
   font-size: 1.7rem;
-  color:whitesmoke;
+  color:rgb(0, 0, 0);
   margin:0 1rem;
 }
 
@@ -398,6 +425,20 @@ header .icons a:hover{
 .opinion .box-container .stars i{
   font-size: 2rem;
 }
+/*Visual-carrito*/
+main{
+  background-color: rgb(132, 0, 255);
+  margin-top: 25px;
+  margin-left: 35%;
+  width: 30%;
+  max-height: 70rem;
+  min-height: 10rem;
+  font-size:2rem;
+  text-align: center;
+  color:hsl(0, 0%, 98%);
+  border-radius:15px;
+}
+
 /*Form*/
 .formulario {
   width: 500px;
@@ -561,4 +602,7 @@ header .icons a:hover{
     font-size: 3rem;
   }
 }
+
+
+
 
